v4.1 - fixed scroll indicator on mobile

--- a/src/app/features/home/home.component.css
+++ b/src/app/features/home/home.component.css
@@ -374,6 +374,7 @@
     flex-direction: column;
     text-align: center;
     padding-top: 7rem;
+    padding-bottom: 5rem;
   }
 
   .home__image-frame {
